--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,16 +42,6 @@ input:-webkit-autofill:active{
     -webkit-text-fill-color: var(--color-white);
 }
 
-#controlled__scroll {
-    position: absolute;
-    top: 0.5px;
-    left: 0;
-    right: 0;
-    bottom: 0.5px;
-    overflow-x: hidden; /* or any other value */
-    overflow-y: auto; /* or any other value */
-}
-
 body {
     overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
